Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-58178

[Reg: 5.6.1->5.6.2] Windows/Software GL: When resizing window the content isn't refreshed

XMLWordPrintable

    • 7780ee9e5f20f80ab9e053058d0b6d92586cf876 (qtbase/5.8, 20.1.2017, 5.8.1), cherry-pick 8969557673b6a636bdf6e5f963000611d5fa6edd (qtbase/5.6, 14.2.2017. 5.6.3)

      When resizing a window with Qt::AA_UseSoftwareOpenGL enabled the window content isn't refreshed properly.
      The issue can be seen after applying commit "Windows QPA: Improve workaround for non-Areo theme GL rendering." 6086c81e4d999d88ce4d412 https://codereview.qt-project.org/#/c/159429/ which disabled use of InvalidateRect() in Windows QPA.

      Steps to reproduce the issue:
      1. Run attached test application
      2. Resize window

      Expected outcome:
      Inside of the window is refreshed properly and no trail of window resize can be seen.

      Actual outcome:
      Resizing window leaves ghost image inside of it and it's not refreshed properly.
      See the attached screenshots.

      Reproduces at least on:
      OS : Windows 10 (64bit)
      Compiler: Visual Studio 2015

        1. Qt5.6.2_after_resizing.png
          461 kB
          Kimmo Leppälä
        2. Qt5.6.2_before_resizing.png
          507 kB
          Kimmo Leppälä
        3. QTBUG-58178.tar.gz
          3 kB
          Kimmo Leppälä
        4. qtbug58178.zip
          4 kB
          Friedemann Kleint
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            kleint Friedemann Kleint
            kileppal Kimmo Leppälä
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes