Windows QPA: Call InvalidateRect() in WM_PAINT/GL Software rendering

Bring back the call to InvalidateRect() removed by change
6086c81e4d999d88ce4d412 since it seems that GL Software rendering
requires it (also for single buffer mode).

Task-number: QTBUG-58178
Change-Id: I197a1b3c3906c4afa43943db30dbc07dfb656cc7
Reviewed-by: Joerg Bornemann <joerg.bornemann@qt.io>
(cherry picked from commit 7780ee9e5f20f80ab9e053058d0b6d92586cf876)